small bug in overflow of content (users and recipe images)

--- a/app/assets/stylesheets/friends.scss
+++ b/app/assets/stylesheets/friends.scss
@@ -8,7 +8,7 @@
 
 .tabs {
 	position: relative;   
-	min-height: 1000px;
+	min-height: 500px;
 	clear: both;
 	width: 60em;
 	margin: 1em auto;
