--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -3,12 +3,11 @@
 	position: relative;
 }
 .profile-card {
-	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
 	border: 1px #e7e7e7 solid;
 	margin-top: 4em;
-	height: 40em;
+	min-height: 40em;
 }
 
 .profile-header {
